# Prank-Virus

./: Cargo.toml  README.md
.github/workflows/: build-ubuntu.yml  build.yml
src/: colors.rs  img.rs  main.rs
